makemessages on translations

--- a/src/etools/applications/field_monitoring/fm_settings/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/fm_settings/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-18 06:45+0000\n"
+"POT-Creation-Date: 2026-02-10 08:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -150,6 +150,9 @@ msgstr "Producto"
 msgid "PD/SPD"
 msgstr "PD/SPD"
 
+msgid "Key Intervention"
+msgstr ""
+
 msgid "Choices Size"
 msgstr "Tamaño de Selección"
 
@@ -229,9 +232,7 @@ msgid "Maximum one related object should be provided"
 msgstr "Debe proporcionarse un máximo de un objeto relacionado"
 
 msgid "HACT questions can only be related at the Partner Organization Level"
-msgstr ""
-"Las preguntas del HACT solo se pueden relacionar a nivel del socio "
-"implementador"
+msgstr "Las preguntas del HACT solo se pueden relacionar a nivel del socio implementador"
 
 msgid "Only one hact question can be active at any time."
 msgstr "Solo una pregunta de HACT puede estar activa en cualquier momento."
