--- a/src/etools/applications/field_monitoring/fm_settings/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/fm_settings/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-18 06:45+0000\n"
+"POT-Creation-Date: 2026-02-10 08:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -150,6 +150,9 @@ msgstr "Produit"
 msgid "PD/SPD"
 msgstr ""
 
+msgid "Key Intervention"
+msgstr ""
+
 msgid "Choices Size"
 msgstr "Taille des choix"
 
@@ -229,9 +232,7 @@ msgid "Maximum one related object should be provided"
 msgstr "Un seul objet connexe doit être fourni au maximum"
 
 msgid "HACT questions can only be related at the Partner Organization Level"
-msgstr ""
-"Les questions de HACT ne peuvent être liées qu'au niveau de l'organisation "
-"partenaire."
+msgstr "Les questions de HACT ne peuvent être liées qu'au niveau de l'organisation partenaire."
 
 msgid "Only one hact question can be active at any time."
 msgstr "Une seule question de hact peut être active à la fois."
