--- a/src/etools/applications/field_monitoring/fm_settings/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/fm_settings/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-18 06:45+0000\n"
+"POT-Creation-Date: 2026-02-10 08:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -150,6 +150,9 @@ msgstr "Saída"
 msgid "PD/SPD"
 msgstr "PD/SPD"
 
+msgid "Key Intervention"
+msgstr ""
+
 msgid "Choices Size"
 msgstr "Escolha Tamanho"
 
@@ -229,8 +232,7 @@ msgid "Maximum one related object should be provided"
 msgstr "Deve ser fornecido, no máximo, um objecto relacionado"
 
 msgid "HACT questions can only be related at the Partner Organization Level"
-msgstr ""
-"As perguntas HACT só podem ser relacionadas ao nível da Organização Parceira"
+msgstr "As perguntas HACT só podem ser relacionadas ao nível da Organização Parceira"
 
 msgid "Only one hact question can be active at any time."
 msgstr "Apenas uma pergunta de facto pode estar activa em qualquer altura."
