--- a/src/etools/applications/field_monitoring/fm_settings/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/fm_settings/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-18 06:45+0000\n"
+"POT-Creation-Date: 2026-02-10 08:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,9 +16,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
-"(n%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 msgid "Methods"
 msgstr "Методы"
@@ -152,6 +150,9 @@ msgstr "Вывод"
 msgid "PD/SPD"
 msgstr "ПД/СПД"
 
+msgid "Key Intervention"
+msgstr ""
+
 msgid "Choices Size"
 msgstr "Выбор размера"
 
@@ -231,8 +232,7 @@ msgid "Maximum one related object should be provided"
 msgstr "Должен быть предоставлен максимум один связанный объект"
 
 msgid "HACT questions can only be related at the Partner Organization Level"
-msgstr ""
-"Вопросы HACT могут быть связаны только на уровне партнерской организации."
+msgstr "Вопросы HACT могут быть связаны только на уровне партнерской организации."
 
 msgid "Only one hact question can be active at any time."
 msgstr "В любой момент времени может быть активен только один вопрос."
